refs to concepts and tasks

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -76,12 +76,24 @@ statements are not updated when a compilation unit is moved.</div>
 </tr>
 </table>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+<div class="copyright"> 
+  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+  <p><a href="../tasks/tasks-6.htm">Java views</a><br>
+    <a href="../concepts/concepts-9.htm">Refactoring support</a><br>
+    <a href="../concepts/ctemplates.htm"></a> </p>
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  </p>
+  <p> <a href="../tasks/tasks-80.htm">Refactoring</a><br>
+  <a href="../tasks/tasks-85.htm">Copying 
+    and moving Java elements</a><br>
+    <a href="../tasks/tasks-51.htm">Moving 
+    folders, packages and files</a><br>
+  </p>
+  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
+    </a> </p>
+  </div>
 
 </body>
 </html>
