--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -249,12 +249,23 @@ the current session.</div>
 menu or in the dialog to review the results of the selected search.</div>
 </div>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+<div class="copyright"> 
+  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+  <p> <a href="../concepts/concepts-8.htm">Java 
+    search</a><br>
+  </p>
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  </p>
+  <p> <a href="../tasks/tasks-103.htm">Conducting 
+    a Java search using the search dialog</a><br>
+    <a href="../tasks/tasks-104.htm">Conducting 
+    a Java search using pop-up menus</a><br>
+  </p>
+  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
+    </a> </p>
+  </div>
 
 </body>
 </html>
