--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -135,12 +135,26 @@
       </li>
     </ol>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+<div class="copyright"> 
+  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+  <p> <a href="../concepts/concepts-3.htm">Java projects</a><br>
+    <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-6.htm">Java 
+    views</a><br>
+    <br>
+  </p>
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  </p>
+  <p><a href="../tasks/tasks-110.htm">Working with build paths</a><br>
+    <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-12.htm">Creating 
+    a new Java project</a><br>
+    <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-45.htm">Using 
+    the Package Explorer</a><br>
+  </p>
+  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
+    </a> </p>
+</div>
 
   </body>
 </html>
