--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -43,12 +43,21 @@
       <img src="../images/qs-7.gif" alt="Package explorer" />
     </div>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+<div class="copyright"> 
+  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+  <p> <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-6.htm">Java 
+    views</a><br>
+  </p>
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  </p>
+  <p><a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-45.htm">Using 
+    the Package Explorer</a></p>
+  <p><br>
+    <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border= 0/> 
+    </a> </p>
+  </div>
 
   </body>
 </html>
