--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -740,12 +740,41 @@ while (Test.class.isAssignableFrom(superClass)) {
       </li>
     </ol>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+  <div class="copyright"> 
+    <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+    <p> <a href="../tasks/tasks-6.htm">Java 
+      views</a><br>
+      <a href="../concepts/concepts-7.htm">Java 
+      editor</a><br>
+      <a href="../concepts/concepts-9.htm">Refactoring 
+      support</a><br>
+      <a href="../concepts/ctemplates.htm">Templates</a><br>
+    </p>
+    <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+    </p>
+    <p><a href="../tasks/tasks-54.htm">Using the Java editor</a><br>
+    <a href="../tasks/tasks-2.htm">Showing and hiding elements</a><br>
+      <a href="../tasks/tasks-6.htm">Showing single elements or whole Java files</a><br>
+      <a href="../tasks/tasks-195.htm">Sorting elements in Java views</a><br>
+      <a href="../tasks/tasks-62.htm">Using the local history</a><br>
+      <a href="../tasks/tasks-65.htm">Using content assist</a><br>
+      <a href="../tasks/tasks-171.htm">Using templates</a><br>
+      <a href="../tasks/tasks-58.htm">Managing import statements</a><br>
+      <a href="../tasks/tasks-80.htm">Refactoring</a><br>
+      <a href="../tasks/tasks-83.htm">Refactoring with preview</a><br>
+      <a href="../tasks/tasks-37.htm">Using the Hierarchy view</a><br>
+    <a href="../tasks/tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
+      <a href="../tasks/tasks-40.htm">Opening a type hierarchy on the current 
+      text selection</a><br>
+      <a href="../tasks/tasks-73.htm">Opening an editor for a selected element</a><br>
+      <br>
+      <br>
+    </p>
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
+      </a> </p>
+  </div>
 
 </div>
 
