--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -30,7 +30,7 @@ From its context menu, select&nbsp;<span CLASS="Label">Open Type Hierarchy</span
 You can also open type hierarchy view:
 <ul>
 <li>
-from the menu bar by selecting Navigate > Open Type Hierarchy.&nbsp;</li>
+from the menu bar by selecting <span CLASS="Label">Navigate > Open Type Hierarchy</span>.&nbsp;</li>
 
 <li>
 from the keyboard by pressing F4 after selecting&nbsp;<span CLASS="Filename">TestCase.java</span>.&nbsp;</li>
@@ -165,7 +165,7 @@ to see a menu or click on the button to edit the history list.
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">From the menu bar, select Window > Preferences. Go to&nbsp;<span CLASS="Label">Java</span>
+<div CLASS="Para">From the menu bar, select <span CLASS="Label">Window > Preferences</span>. Go to&nbsp;<span CLASS="Label">Java</span>
 and select&nbsp;<span CLASS="Label">Open a new Type Hierarchy Perspective</span>.
 Then click&nbsp;<span CLASS="Label">OK</span>.</div>
 </td>
@@ -193,12 +193,20 @@ under <span class="Label">Window &gt; Preferences &gt; Workbench &gt; Perspectiv
 </tr>
 </table>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+<div class="copyright"> 
+  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+  <p> <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-6.htm">Java 
+    views</a><br>
+  </p>
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  </p>
+  <p><a href="../tasks/tasks-37.htm">Using the Hierarchy view</a></p>
+  <p>&nbsp;</p>
+  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
+    </a> </p>
+</div>
     
 </body>
 </html>
