--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -218,12 +218,29 @@ line will disappear as the correction is applied.</td>
 </tr>
 </table>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+<div class="copyright"> 
+  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+  <p> <a href="../concepts/concepts-7.htm">Java editor</a><br>
+    <a href="../tasks/tasks-6.htm">Java 
+    views</a><br>
+    <a href="../concepts/concepts-4.htm">Java builder</a><br>
+  </p>
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  </p>
+  <p> <a href="../tasks/tasks-54.htm">Using 
+    the Java editor</a><br>
+    <a href="../tasks/tasks-69.htm">Viewing 
+    documentation and information</a><br>
+    <a href="../tasks/tasks-175.htm">Using 
+    QuickFix</a><br>
+  <a href="../tasks/tasks-106.htm">Building 
+    a Java program</a><br>
+  </p>
+  <p><a href="../hglegal2002.htm"> <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
+    </a> </p>
+</div>
 
 </body>
 </html>
