--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -127,12 +127,27 @@ undo buffer is cleared.</div>
 </tr>
 </table>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+<div class="copyright"> <a href="../hglegal2002.htm"> </a>
+  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+  <p> <a href="../concepts/concepts-9.htm">Refactoring support</a></p>
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  </p>
+  <p><a href="../tasks/tasks-80.htm">Refactoring</a><br>
+  <a href="../tasks/tasks-92.htm">Renaming 
+    a compilation unit</a><br>
+   <a href="../tasks/tasks-82.htm">Refactoring 
+    without preview</a><br>
+    <a href="../tasks/tasks-83.htm">Refactoring 
+    with preview</a><br>
+    <a href="../tasks/tasks-84.htm">Previewing 
+    refactoring changes</a><br>
+    <a href="../tasks/tasks-100.htm">Undoing 
+    a refactoring operation</a><br>
+  </p>
+  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/></a> 
+</div>
 
 </body>
 </html>
