--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -217,12 +217,26 @@ the prefix or suffix.</td>
 </tr>
 </table>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+<div class="copyright"> 
+  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+  <p><a href="../tasks/tasks-6.htm">Java views</a><br>
+    <a href="../concepts/concepts-7.htm">Java editor</a><br>
+    <a href="../concepts/concepts-9.htm"></a></p>
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  </p>
+  <p><a href="../tasks/tasks-175.htm">Using QuickFix</a><br>
+   <a href="../tasks/tasks-11.htm">Creating 
+    Java elements</a><br>
+    <a href="../tasks/tasks-43.htm">Overriding 
+    a method using the Hierarchy view</a><br>
+    <a href="../tasks/tasks-57.htm">Generating 
+    accessors</a><br>
+    <a href="../tasks/tasks-106.htm"></a></p>
+  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/></a> 
+  </p>
+  </div>
 
 </body>
 </html>
