*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
@@ -21,10 +21,10 @@ of selected resources and elements in the following views:
 Search, Outline, and Hierarchy views: The selected Java element in these
 views can be searched for declarations and references.</li>
 
-<li CLASS="Item">
-Package Explorer: Packages, Java compilation units, types and their members
-can be searched for declarations and references. If a compilation unit
-or CLA contains more than one type, a dialog prompts you to choose one.</li>
+  <li CLASS="Item"> Package Explorer: Packages, Java compilation units, types 
+    and their members can be searched for declarations and references. If a compilation 
+    unit or CLASS file contains more than one type, a dialog prompts you to choose 
+    one.</li>
 </ul>
 The search pop-up menu is also available in the Java editor. If the selection
 in the Java editor can be resolved to a Java element, then you can search
@@ -33,18 +33,18 @@ for declarations and references.
 <p CLASS="Para">To conduct a search from a pop-up menu, follow these steps:
 <ol>
 <ol>
-<li CLASS="Para">
-Select a Java element (for example a Java compilation unit in the Packages
-view or a method in the Outline view) or some text in a Java editor.</li>
+    <li CLASS="Para"> Select a Java element (for example a Java compilation unit 
+      in the Package Expolorer or a method in the Outline view) or some text in 
+      a Java editor.</li>
 
 <li CLASS="Para">
 From the selection's pop-up menu, navigate to the available Java searches.
 After you select a search to perform, the search progress is shown in a
-dialog. Note: in the editor searches are available under the&nbsp;<span CLASS="Label"><b>Search</span></b>
+dialog. Note: in the editor searches are available under the&nbsp;<span CLASS="Label"><b>Search</b></span>
 submenu.</li>
 
 <li CLASS="Para">
-You may stop the search process by clicking&nbsp;<span CLASS="Label"><b>Cancel</span></b>
+You may stop the search process by clicking&nbsp;<span CLASS="Label"><b>Cancel</b></span>
 in the progress dialog.</li>
 </ol>
 </ol>
