--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -139,16 +139,16 @@
 <div class="copyright"> 
   <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
   <p> <a href="../concepts/concepts-3.htm">Java projects</a><br>
-    <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-6.htm">Java 
+    <a href="../tasks/tasks-6.htm">Java 
     views</a><br>
     <br>
   </p>
   <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
   </p>
   <p><a href="../tasks/tasks-110.htm">Working with build paths</a><br>
-    <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-12.htm">Creating 
+    <a href="../tasks/tasks-12.htm">Creating 
     a new Java project</a><br>
-    <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-45.htm">Using 
+    <a href="../tasks/tasks-45.htm">Using 
     the Package Explorer</a><br>
   </p>
   <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
