--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -46,12 +46,12 @@
     
 <div class="copyright"> 
   <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-  <p> <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-6.htm">Java 
+  <p> <a href="../tasks/tasks-6.htm">Java 
     views</a><br>
   </p>
   <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
   </p>
-  <p><a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-45.htm">Using 
+  <p><a href="../tasks/tasks-45.htm">Using 
     the Package Explorer</a></p>
   <p><br>
     <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
