--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -196,7 +196,7 @@ under <span class="Label">Window &gt; Preferences &gt; Workbench &gt; Perspectiv
     
 <div class="copyright"> 
   <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-  <p> <a href="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/tasks/tasks-6.htm">Java 
+  <p> <a href="../tasks/tasks-6.htm">Java 
     views</a><br>
   </p>
   <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
