*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -23,9 +23,11 @@ using standard platform build mechanisms.</p>
 <h3> Compiling code</h3>
 <p> You can programmatically compile the Java source files in a project using 
 the build API.</p>
-<font color="#4444cc">
-<pre>   IProgressMonitor myProgressMonitor;<br>   myProject.build(IncrementalProjectBuilder.INCREMENTAL_BUILD, myProgressMonitor);<br></pre>
-</font>
+<font color="#4444cc"><pre>
+   IProject myProject;
+   IProgressMonitor myProgressMonitor;
+   myProject.build(IncrementalProjectBuilder.INCREMENTAL_BUILD, myProgressMonitor);
+</pre></font>
 <p> For a Java project, this invokes the Java incremental project builder
  (along with any other incremental project builders that have been added
 to  the project's build spec). The generated .class files are written to
