--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_new_wizard_page.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_new_wizard_page.htm
@@ -17,10 +17,10 @@
  
 <p> The <a href="../reference/api/org/eclipse/jdt/ui/wizards/package-summary.html">org.eclipse.jdt.ui.wizards</a> 
   package provides wizard pages for creating Java elements. Besides using the 
-  prefabricated pages clients have the possibility to subclass the wizard pages 
-  to add their own input fields or to influence the code generation. Below is 
-  a sample of a new type wizard page that is customized to create JUnit test case 
-  classes. The page initializes the super class field with &quot;junit.framework.TestCase&quot; 
+  prefabricated pages clients have the ability to subclass the wizard pages to 
+  add their own input fields or to influence the code generation. Below is a sample 
+  of a new type wizard page that is customized to create JUnit test case classes. 
+  The page initializes the super class field with &quot;junit.framework.TestCase&quot; 
   and adds a checkbox that controls whether method stubs for the setUp() and tearDown() 
   method are to be created.</p>
 <pre><font color="#4444CC">public class TestCaseWizardPage extends NewTypeWizardPage {<br>	<br>	private Button fCreateStubs;
