--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
@@ -17,8 +17,8 @@
  
 <p> The <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/package-summary.html"> 
   org.eclipse.ui.jarpackager</a> package provides utility classes to programmatically 
-  export files to a Jar file. Below a code snippet that outlines the use of the 
-  <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html">JarPackageData</a> 
+  export files to a Jar file. Below is a code snippet that outlines the use of 
+  the <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html">JarPackageData</a> 
   class:</p>
 <p class="Code">void createJar(IType mainType, IFile[] filestoExport) {<br>
 &nbsp;&nbsp; &nbsp;Shell parentShell= ...;<br>
