--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_prompter.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_prompter.htm
@@ -38,10 +38,9 @@
 </font></p>
 <p class="Code"><font color="#4444cc">}</font></p>
 <br>
-  Besides methods to create a &nbsp;type prompter dialog the class <a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html">
-  JavaUI</a>
-   provides additional methods to create package and main type prompter dialogs
- as well.<br>
+In addition to methods for creating a &nbsp;type prompter dialog the class <a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"> 
+JavaUI</a> provides additional methods for creating package and main type prompter 
+dialogs as well.<br>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
 </a>
 </p>
