*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
@@ -23,7 +23,9 @@ Code modification using Java elements</h3>
 Generating a compilation unit
 </h4>
 <P>
-The easiest way to programmatically generate a compilation unit is to use <b>IPackageFragment.createCompilationUnit</b>. You specify the name and contents of the compilation unit. The compilation unit is created inside the package and the new
+The easiest way to programmatically generate a compilation unit is to use 
+<b><a href="../reference/api/org/eclipse/jdt/core/IPackageFragment.html#createCompilationUnit(java.lang.String, java.lang.String, boolean, org.eclipse.core.runtime.IProgressMonitor)">IPackageFragment.createCompilationUnit</a></b>. 
+You specify the name and contents of the compilation unit. The compilation unit is created inside the package and the new
 <b><a href="../reference/api/org/eclipse/jdt/core/ICompilationUnit.html"> ICompilationUnit</a></b> is returned. </P>
 <P>
 A compilation unit can be created generically by creating a file resource whose extension is &quot;<b>.java&quot;</b> in the appropriate folder that corresponds to the package directory. Using the generic resource API is a back door to the Java tooling, so the Java model is not updated until the generic resource change listeners are
@@ -37,8 +39,11 @@ Modifying a compilation unit
 Most simple modifications of Java source can be done using the Java element API.</P>
 <P>
 For example, you can query a type from a compilation unit. Once you have the <a href="../reference/api/org/eclipse/jdt/core/IType.html"><b>IType</b></a>, you can use protocols such as
-<b>createField</b>, <b>createInitializer</b>,
-<b>createMethod</b>, or <b> createType</b> to add source code members to the type. The source code and information about the location of the member is supplied in these methods.</P>
+<a href="../reference/api/org/eclipse/jdt/core/IType.html#createField(java.lang.String, org.eclipse.jdt.core.IJavaElement, boolean, org.eclipse.core.runtime.IProgressMonitor)"><b>createField</b></a>, 
+<a href="../reference/api/org/eclipse/jdt/core/IType.html#createInitializer(java.lang.String, org.eclipse.jdt.core.IJavaElement, org.eclipse.core.runtime.IProgressMonitor)"><b>createInitializer</b></a>,
+<a href="../reference/api/org/eclipse/jdt/core/IType.html#createMethod(java.lang.String, org.eclipse.jdt.core.IJavaElement, boolean, org.eclipse.core.runtime.IProgressMonitor)"><b>createMethod</b></a>, 
+or <a href="../reference/api/org/eclipse/jdt/core/IType.html#createType(java.lang.String, org.eclipse.jdt.core.IJavaElement, boolean, org.eclipse.core.runtime.IProgressMonitor)"><b>createType</b></a> 
+to add source code members to the type. The source code and information about the location of the member is supplied in these methods.</P>
 <P>
 The <b><a href="../reference/api/org/eclipse/jdt/core/ISourceManipulation.html"> ISourceManipulation</a></b> interface defines common source manipulations for Java elements. This includes methods for renaming, moving, copying, or deleting a type's member. </P>
 
@@ -47,7 +52,8 @@ The <b><a href="../reference/api/org/eclipse/jdt/core/ISourceManipulation.html">
 Working copies
 </h4>
 <P>
-Code can be modified by manipulating the compilation unit (and thus the underlying <b>IFile</b> is modified) or
+Code can be modified by manipulating the compilation unit (and thus the underlying 
+<a HREF="../../org.eclipse.platform.doc.isv/reference/api/org/eclipse/core/resources/IFile.html"><b>IFile</b></a> is modified) or
 one can modify an in-memory copy of the compilation unit called a working copy. </P>
 <P>
 A working copy is obtained from a compilation unit using the 
